--- a/translations/kangyur/placeholders/096-001_toh752,954-the_incantation_of_vajrajita_who_is_bewildering_like_fire.xml
+++ b/translations/kangyur/placeholders/096-001_toh752,954-the_incantation_of_vajrajita_who_is_bewildering_like_fire.xml
@@ -14,11 +14,11 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryavajrājitānalapramohanī­nāmadhāraṇī</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-096-001"/>
             </publicationStmt>
             <sourceDesc>
@@ -49,6 +49,12 @@
                 </change>
                 <change who="#sameer" when="2024-07-02T09:31:04.22Z" type="text-version" status="0.0.2" xml:id="UT22084-096-001-2">
                     <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-01T12:21:42.444Z" type="translation-status" status="3" xml:id="UT22084-096-001-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-01T12:21:42.444Z" type="text-version" status="0.0.3" xml:id="UT22084-096-001-4">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
