--- a/translations/kangyur/placeholders/096-009_toh760,965-the_incantation_of_vajralohatunda.xml
+++ b/translations/kangyur/placeholders/096-009_toh760,965-the_incantation_of_vajralohatunda.xml
@@ -13,11 +13,11 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">Vajralohatuṇḍanāmadhāraṇī</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-096-009"/>
             </publicationStmt>
             <sourceDesc>
@@ -48,6 +48,12 @@
                 </change>
                 <change who="#sameer" when="2024-07-02T10:06:03.118Z" type="text-version" status="0.0.2" xml:id="UT22084-096-009-2">
                     <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-01T12:22:59.494Z" type="translation-status" status="3" xml:id="UT22084-096-009-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-01T12:22:59.494Z" type="text-version" status="0.0.3" xml:id="UT22084-096-009-4">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
