--- a/translations/kangyur/placeholders/096-012_toh763,966-black_lohatunda.xml
+++ b/translations/kangyur/placeholders/096-012_toh763,966-black_lohatunda.xml
@@ -13,11 +13,11 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryakṛṣṇāyauṣṭha</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-096-012"/>
             </publicationStmt>
             <sourceDesc>
@@ -48,6 +48,12 @@
                 </change>
                 <change who="#sameer" when="2024-07-02T10:12:19.165Z" type="text-version" status="0.0.2" xml:id="UT22084-096-012-2">
                     <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-01T13:23:56.414Z" type="translation-status" status="3" xml:id="UT22084-096-012-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-01T13:23:56.414Z" type="text-version" status="0.0.3" xml:id="UT22084-096-012-4">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
