--- a/translations/kangyur/placeholders/096-022_toh773,969-mahasvasa_king_of_spells.xml
+++ b/translations/kangyur/placeholders/096-022_toh773,969-mahasvasa_king_of_spells.xml
@@ -11,11 +11,11 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rig sngags kyi rgyal po dbugs chen po zhes bya ba/</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-096-022"/>
             </publicationStmt>
             <sourceDesc>
@@ -46,6 +46,12 @@
                 </change>
                 <change who="#sameer" when="2024-07-02T10:14:29.422Z" type="text-version" status="0.0.2" xml:id="UT22084-096-022-2">
                     <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-01T14:17:43.06Z" type="translation-status" status="3" xml:id="UT22084-096-022-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-01T14:17:43.06Z" type="text-version" status="0.0.3" xml:id="UT22084-096-022-4">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
