--- a/translations/kangyur/placeholders/096-063_toh814,1099-a_prayer_and_statement_of_truth_from_the_great_peahen_queen_of_incantations_cf_toh_559.xml
+++ b/translations/kangyur/placeholders/096-063_toh814,1099-a_prayer_and_statement_of_truth_from_the_great_peahen_queen_of_incantations_cf_toh_559.xml
@@ -7,11 +7,11 @@
                 <title xml:lang="en" type="mainTitle">A Prayer and Statement of Truth from The Great Peahen, Queen of Dhāraṇīs</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-096-063"/>
             </publicationStmt>
             <sourceDesc>
@@ -60,6 +60,12 @@
                 </change>
                 <change who="#sameer" when="2024-07-08T06:57:52.502Z" type="text-version" status="0.0.2" xml:id="UT22084-096-063-7">
                     <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-01T14:21:49.076Z" type="translation-status" status="3" xml:id="UT22084-096-063-8">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-01T14:21:49.076Z" type="text-version" status="0.0.3" xml:id="UT22084-096-063-9">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
