--- a/translations/kangyur/placeholders/096-067_toh818,1102,4401-verses_of_wellwishing.xml
+++ b/translations/kangyur/placeholders/096-067_toh818,1102,4401-verses_of_wellwishing.xml
@@ -9,11 +9,11 @@
                 <title type="mainTitle" xml:lang="en">Verses of Well-wishing</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2024</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-096-067"/>
             </publicationStmt>
             <sourceDesc>
@@ -69,6 +69,12 @@
                 </change>
                 <change who="#sameer" when="2024-07-08T07:07:42.348Z" type="text-version" status="0.0.4" xml:id="UT22084-096-067-7">
                     <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-01T14:23:05.671Z" type="translation-status" status="3" xml:id="UT22084-096-067-8">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-01T14:23:05.671Z" type="text-version" status="0.0.5" xml:id="UT22084-096-067-9">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
